[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
eframe = "0.29"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
native-tls = "0.2"
uuid = { version = "1.19.0", features = ["v4"] }