[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
uuid = { version = "1.19.0", features = ["v4"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
